--- a/templates/game/doc.html.twig
+++ b/templates/game/doc.html.twig
@@ -10,6 +10,7 @@
 
         <h2>Flödesschema</h2>
         <p>Här är ett flödesschema som visar grunderna för hur spelet "21" fungerar:</p>
+        <img src="{{ asset('images/flowchart.jpg') }}" alt="Flödesschema">
 
         <h2>Psuedokod</h2>
         <p>Följande pseudokod beskriver logiken för att starta spelet och hantera spelarens tur:</p>
