--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -611,7 +611,7 @@ input {
 }
 
 .stay {
-    background-color: #6c995d;
+    background-color: #f68506;
     color: #fff;
     font-size: 1.3rem;
 }
@@ -644,8 +644,8 @@ input {
 }
 
 .link a {
-    color: #3498db;
-    text-decoration: none;
+    color: #104b73;
+    text-decoration: underline;
     font-size: 1.3em;
 }
 
