--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -18,7 +18,7 @@
             <li>Kort 2–10 är värda sitt nummer.</li>
             <li>Klöver, dam och kung är värda 10 poäng.</li>
             <li>Ess är värt 1 eller 11 poäng, beroende på vad som är bäst för handen.</li>
-            <li>Du får två kort i början och kan välja att "ta kort" (hit) eller "stå" (stand).</li>
+            <li>Du får två kort i början och kan välja att "ta kort" (hit) eller "stanna" (stand).</li>
             <li>Dealern måste ta kort tills deras hand är minst 17.</li>
             <li>Om din hand går över 21, bustar du och förlorar. Om dealern bustar eller du har högre poäng, vinner du!</li>
         </ul>
