Edited the report

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -103,7 +103,33 @@
             <section id="kmom03">
                 <h2>Kmom03</h2>
                 <p>
-                    Redovisningstext för kmom03
+                    Jag tycker att jobba med flödesdiagram och psuedokod är bra då det tvingar en att fundera och tänka genom hur man vill
+                    att koden ska fungera. Man får också en bra visuell representation av spelets logik. Det var dock första gången att jag 
+                    har jobbat med psuedokod eller flödesdigram och jag var lite osaker hur de skulle se ut, men jag gjorde mitt bästa och 
+                    jag kommer säkert bli bättre på det om jag övar lite på hur man ska rita en bra flödesdigram och skriva bra pusedokod.
+                    Flödsdigrammen ritade jag på min ipad och psuedokoden skrev jag i en notepad app på datorn, sedan tog jag en screenshot 
+                    på dessa och klistrade in de i dokumentationssidan.
+                </p><br>
+
+                <p>
+                    I min implementation av kortspelsapplikationen återanvände jag mina Card och DeckOfCards klasser från förra kursmomentet.
+                    Min CardGame klass representerar ett enskilt kort i spelet. Den lagrar egenskaper såsom kortets färg och värde. DeckOfCardsGame
+                    klassen fungerar som en kortlek och hanterar alla kortrelaterade operationer, den skapar en hel kortlek med 52 kort. Player klassen
+                    representerar en spelare i kortspelet, den lagrar spelarens namn och hand. Min Game klass hanterar spelets tillstånd och logik 
+                    genom att koordinera interaktioner mellan kortleken och spelarna. CardGameController hanterar användareinteraktioner och
+                    sessionstillstånd. Jag är nöjd med hur applikationen fungerar. En Förbättringspotential hade varit att implementera de valfria
+                    kraven i uppgiften.
+                </p><br>
+
+                <p>
+                    Att koda i Symfony känns mycket bättre nu än i början på kursen då jag har fått en bättre förståelse för ramverkets
+                    struktur. Det kändes väldigt stort och krångligt i början, men nu när jag har fått jobba med ramverket ett tag känns
+                    det väldigt bra.
+                </p><br>
+
+                <p>
+                    Min TIL för detta kursmoment är att problemlösa innan man börjar med att skriva sin kod, genom att till exempel rita en 
+                    flödesdiagram eller skriva psuedokod.
                 </p>
             </section>
 
