Modified report template

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -118,7 +118,7 @@
                     representerar en spelare i kortspelet, den lagrar spelarens namn och hand. Min Game klass hanterar spelets tillstånd och logik 
                     genom att koordinera interaktioner mellan kortleken och spelarna. CardGameController hanterar användareinteraktioner och
                     sessionstillstånd. Jag är nöjd med hur applikationen fungerar. En Förbättringspotential hade varit att implementera de valfria
-                    kraven i uppgiften.
+                    kraven i uppgiften. Jag måste också bli bättre på att göra flera små commits under tiden jag skriver min kod.
                 </p><br>
 
                 <p>
