Edited report template

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -136,7 +136,32 @@
             <section id="kmom04">
                 <h2>Kmom04</h2>
                 <p>
-                    Redovisningstext för kmom04
+                    Jag tyckte att skriva tester var lite av en utmaning, eftersom det kräver att man tänker väldigt noggrant på 
+                    hur varje del av koden ska testas. För mig var övningen "Get going with PHPUnit" mycket hjälpsam, och texten 
+                    var enkel att följa. Den gjorde det lättare att förstå hur man kommer igång med testskrivning och hur PHPUnit 
+                    fungerar. En annan funktion som jag tyckte var mycket användbar var den genererade dokumentationen i 
+                    docs/coverage. Här kan man tydligt se vilka rader av koden som har testats, och de rader som inte har 
+                    testats markeras i röd färg. Denna översikt var en stor hjälp när jag skrev mina tester, eftersom den gav en 
+                    bra visuell indikation på vad som behövde täckas och vad som saknades.
+                </p><br>
+
+                <p>
+                    Jag lyckades få 100% kodtäckning på alla mina klasser förutom 'Game'. Jag hade som mål att få 100% även där men 
+                    jag hann tyvärr inte. Trots det är  jag nöjd att jag lyckades få alla mina klasser över 90% kodtäckning, 
+                    vilket känns som ett bra resultat. Jag tycker att min kod består av testbar kod, men det finns definitvt 
+                    förbättringsområden för att göra koden mer testbar. Jag valde dock att inte skriva om delar av min kod för att
+                    göra den mer testbar.
+                </p><br>
+
+                <p>
+                    Ja, jag tycker att testbar kod är tecken på "snygg och ren kod". När kod är enkel att testa, brukar den välstrukturerad
+                    i mindre delar som är lätta att förstå och ändra. Om koden är svår att testa eller behöver komplicerade lösningar kan '
+                    det vara tecken på att designen är för krånglig. Att koden är testbar innebär också att koden är mer lättförståelig och
+                    är också lättare att underhålla.
+                </p><br>
+
+                <p>
+                    Min TIL för detta kursmomentet är att jag lärt mig hur man skriver tester med PHPunit.
                 </p>
             </section>
 
