--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,7 @@
                 <li><a href="{{ path('pig_init_get') }}">Pig game (init)</a></li>
                 <li><a href="{{ path('card') }}">Card game</a></li>
                 <li><a href="{{ path('game') }}">Game</a></li>
+                <li><a href="{{ path('library') }}">Library</a></li>
             </ul>
         </nav>
 
