Added create function

--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -11,6 +11,7 @@
 
     <div class="library">
         <h1>Library</h1>
+        <p><a href="{{ path('book_create') }}">Add a new book</a></p>
     </div>
 </main>
 {% endblock %}
