--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -734,3 +734,46 @@ input {
     margin-top: 1.5rem;
     font-size: 1.7rem;
 }
+
+.create-book h1 {
+    color: #0056b3;
+}
+
+.create-book p {
+    font-size: 1.3rem;
+    margin: 0.8rem;
+}
+
+.save-button {
+    display: block;
+    margin: 20px auto;
+    font-size: 1.7rem;
+    padding: 10px 20px;
+    background-color: #cf7f00;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.save-button:hover {
+    background-color: #5b4600;
+}
+
+.input-book {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-label {
+    font-size: 1.7rem;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+.form-input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
