--- a/templates/book/create.html.twig
+++ b/templates/book/create.html.twig
@@ -32,6 +32,7 @@
         </form>
 
         <p class="link">
+            <a href="{{ path('book_show_all') }}">See all books</a> |
             <a href="{{ path('library') }}">Back to library</a>
         </p>
     </div>
