--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -12,6 +12,7 @@
     <div class="library">
         <h1>Library</h1>
         <p><a href="{{ path('book_create') }}">Add a new book</a></p>
+        <p><a href="{{ path('book_show_all') }}">Show all books</a></p>
     </div>
 </main>
 {% endblock %}
