--- a/templates/book/show_all.html.twig
+++ b/templates/book/show_all.html.twig
@@ -19,7 +19,9 @@
                 <tbody>
                     {% for book in books %}
                         <tr>
-                            <td>{{ book.title }}</td>
+                            <td>
+                                <a href="{{ path('book_show', {'id': book.id}) }}">{{ book.title }}</a>
+                            </td>
                             <td>{{ book.isbn }}</td>
                             <td>{{ book.author }}</td>
                         </tr>
