added delete function

--- a/templates/book/show_all.html.twig
+++ b/templates/book/show_all.html.twig
@@ -33,6 +33,7 @@
         {% endif %}
 
         <p class="link">
+            <a href="{{ path('book_create') }}">Add a new book</a>
             <a href="{{ path('library') }}">Back to library</a>
         </p>
     </div>
