--- a/templates/book/show_one.html.twig
+++ b/templates/book/show_one.html.twig
@@ -17,6 +17,7 @@
 
         <p class="link">
             <a href="{{ path('book_update', {'id': book.id}) }}">Edit Book</a> |
+            <a href="{{ path('book_delete_by_id', {'id': book.id}) }}" class="delete-link" onclick="return confirm('Are you sure you want to delete this book?')">Delete Book</a> |
             <a href="{{ path('book_show_all') }}">Back to all books</a> |
             <a href="{{ path('library') }}">Back to library</a>
         </p>
