--- a/templates/metrics.html.twig
+++ b/templates/metrics.html.twig
@@ -145,8 +145,17 @@
             </p>
 
             <h3>Resultat</h3>
-            <p>
-                
+            <p style="text-indent: 1.5em;">
+                1. 
+            </p>
+            <p style="text-indent: 1.5em;">
+                2. 
+            </p>
+            <p style="text-indent: 1.5em;">
+                3. 
+            </p>
+            <p style="text-indent: 1.5em;">
+                4. 
             </p>
 
         </div>
